# tuplet

./: .clang-format  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  pack.sh  run_gcov.sh  std::tuple-times.csv  tuplet::tuple-times.csv
.github/workflows/: cmake.yml
bench/: bench-heterogenous.cpp  bench-homogenous.cpp  bench-single-elem.cpp  bench.cpp  shared.hpp
bench-compile-times/: apply.cpp  bench-apply.sh  print_ans.cpp
bench-compile-times/data/: i9-9900K-std-apply-times.csv  i9-9900K-tuplet-apply-times.csv
cmake/: helper.cmake
compiler-diagnostic/: tuple-cat-test-1-a24ae4.cpp  tuple-cat-test-1-a24ae4.sh
include/tuplet/: format.hpp  permute.hpp  size_sorted_tuple.hpp  tuple.hpp  tuplet.hpp
legacy_tests/: apply_1.cpp  assign_4.cpp  binding_1.cpp  index_1.cpp  index_3.cpp  initialize_1.cpp  initialize_2.cpp  tie_1.cpp  tuple_cat_1.cpp
test/: apply-test-1.cpp  assign-test-1.cpp  assign-test-2.cpp  assign-test-3.cpp  assign-test-4.cpp  assign-test-5.cpp  assign_1.cpp  assign_2.cpp  assign_3.cpp  binding-test-1.cpp  binding-test-2.cpp  binding-test-3.cpp  binding_2.cpp  binding_3.cpp  compare_1.cpp  convert-test-1.cpp  empty.cpp  hello-tuplet.cpp  index-test-1.cpp  index-test-2.cpp  index-test-3.cpp  index-test-4.cpp  index_2.cpp  initialize-test-1.cpp  initialize-test-2.cpp  initialize-test-3.cpp  nested_1.cpp  ref-test-1.cpp  test-kilo-tuple.cpp  test-nested-1.cpp  test-traits.cpp  test_alignment.cpp  test_all.cpp  test_any.cpp  test_apply.cpp  test_assign_std_tuple.cpp  test_assignment.cpp  test_compare.cpp  test_conversion.cpp  test_core.cpp  (+11 more)
test/util/: printing.hpp  reflection.hpp
test2/: all.cpp  apply.cpp  assignment.cpp  compare.cpp  main.cpp  structured_bindings.cpp  test_apply.cpp  test_permute.cpp  test_size_sorted.cpp  test_tuplet.cpp
test2/util/: printing.hpp
